[package]
name = "cuddly-robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
clap = { version = "3.2.15", features = ["derive", "env"] }
derive_more = "0.99"
derive-new = "0.5"
url = {version = "2.3", features = ["serde"] }
csv = "1.1"
regex = "1.6"
